--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: Jekyll Themes
 description: A directory of the best-looking themes for Jekyll blogs
-url: 'http://themes.jekyllrc.org'
+url: 'http://syncscale.com'
 baseurl: ''
-github: 'https://github.com/jekyllrc/jekyllthemes'
+github: 'https://github.com/syncscale'
 permalink: /:title/
 markdown: kramdown
 cdn: 'https://cdn.rawgit.com/jekyllrc/jekyllthemes/gh-pages'
